[package]
name = "uup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"]}
futures = "0.3.30"
async-trait = "0.1.83"
argh = "0.1.12"
anyhow = "1.0.89"
tokio-icmp-echo = "0.4.1"
rand = "0.8.5"
serde_json = "1.0.128"
regex = "1.11.0"
dns-lookup = "2.0.4"